Auto stash before merge of "develop" and "origin/develop"

--- a/checkout.html
+++ b/checkout.html
@@ -1097,7 +1097,7 @@
                         </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="single-sidebar">
+                  <div class="single-sidebar" id="order_review_overall">
                     <h2 id="order_review_heading" class="text-center d-block">Đơn hàng của bạn</h2>
 
                     <div id="order_review" style="position: relative;">
